--- a/usersstyles/homevika.css
+++ b/usersstyles/homevika.css
@@ -5,12 +5,85 @@
     width: 100px;
     height: 100px;
 }
+#av {
+    position: absolute;
+    left: 25px;
+    top: 59px;
+    font-size: 30px;
+}
+#va {
+    position: absolute;
+    left: 14px;
+    top: 22px;
+    font-size: 30px;
+}
 #nick {
     position: absolute;
     top: 100px;
     left: 40%;
 }
+#dgt {
+    position: absolute;
+    width: 300px;
+    background-color:rgb(129, 129, 129);
+    height: 100px;
+    left: 50px;
+    border-radius: 15px;
+    top: 300px;
+    display: none;
+}
+#gf {
+    position: absolute;
+    top: 8px;
+    left: 14px;
+    height: 80px;
+    width: 80px;
+}
+#gff {
+    position: absolute;
+    top: 8px;
+    left: 111px;
+    height: 80px;
+    width: 80px;
+}
+#gfff {
+    position: absolute;
+    top: 8px;
+    left: 206px;
+    height: 80px;
+    width: 80px;
+}
+#adki {
+    position: absolute;
+    width: 55px;
+    height: 60px;
+    
+    left: 322px;
+    top: 20px;
+    background-size: -79px 62px;
+    background-image: url(icon/like.png);
+}
 
+#adkii {
+    position: absolute;
+    width: 55px;
+    height: 60px;
+    left: 322px;
+    display: none;
+    top: 20px;
+    background-size: -79px 62px;
+    background-image: url(icon/like.png);
+}
+#adkiii {
+    position: absolute;
+    display: none;
+    width: 55px;
+    height: 60px;
+    left: 322px;
+    top: 20px;
+    background-size: -79px 62px;
+    background-image: url(icon/like.png);
+}
 #undo {
     position: absolute;
     left: 0px;
@@ -43,11 +116,18 @@
     solid     /* style */
     rgb(0, 0, 0);  /* color */
     background-size: 75px 444px;
-    background-image: url(/icon/NEW.png);
+    background-image: url(icon/NEW.png);
 }
-
-#hed2 {
+#avata {
+    position: absolute;
+    width: 278px;
+    height: 300px;
+    left: 60px;
+    top: 194px;
     display: none;
+}
+#hed2 {
+    
     position: absolute;
     top: 185px;
     left: 50px;
@@ -56,8 +136,8 @@
     border-radius: 9px;
     border: 3px /* width */ solid /* style */ rgb(0, 0, 0);
     background: rgb(0, 0, 0);
-    background-size: 345px 347px;
-    background-image: url(https://i.ibb.co/Mk1kGqk/fes.jpg);
+    background-size: 364px 282px;
+    background-image: url(https://memepedia.ru/wp-content/uploads/2019/01/hamster.jpg);
 }
 #home {
     position: absolute;
@@ -66,7 +146,9 @@
     width: 74px;
     height: 71px;
     display: none;
-}    .u {
+}   
+
+.u {
     /* … */
     transition: transform .2s;
 }    .u:hover {
@@ -81,21 +163,8 @@
     height: 62px;
 
 }
-#wa {
-    position: absolute;
-    left: 160px;
-    top: 150px
-}
-#avata {
-    position: absolute;
-    width: 251px;
-    height: 262px;
-    left: 78px;
-    top: 194px;
-    display: none;
-}
 #hed3 {
-    display: none;
+    
     position: absolute;
     top: 459px;
     left: 48px;
@@ -105,8 +174,8 @@
     border-radius: 9px;
     background: rgb(0, 0, 0);
     border: 3px /* width */ solid /* style */ rgb(0, 0, 0);
-    background-size: 320px 347px;
-    background-image: url(/icon/da.jpg);
+    background-size: 350px 350px;
+    background-image: url(https://i.gifer.com/7TMH.gif);
 }
 
 #awdf {
