--- a/css/style.css
+++ b/css/style.css
@@ -12,11 +12,155 @@
 
 /*
 
-
 transform: scale(1.2);
+*/
 
 
- */
+#akui {
+    position: absolute;
+    top: 0px;
+    left: 50px;
+    display: none;
+
+}
+
+#tbutg4 {
+    position: absolute;
+    top: 0px;
+    left: 50px;
+    display: none;
+
+
+}
+
+
+#tbutg3 {
+    position: absolute;
+    top: 0px;
+    left: 50px;
+    display: none;
+
+
+}
+
+
+#tbutg2 {
+    position: absolute;
+    top: 0px;
+    left: 50px;
+    display: none;
+
+
+}
+#tbutgw1 {
+    position: absolute;
+    top: -70px;
+    left: -20px;
+    display: none;
+
+
+}
+
+#tbutg1 {
+    position: absolute;
+    top: 0px;
+    left: 50px;
+    display: none;
+
+
+}
+#timg4 {
+    position: absolute;
+    left: 5px;
+    top: 726px;
+    height: 125px;
+    width: 188px;
+    display: none;
+}
+#timg2 {
+    position: absolute;
+    left: -40px;
+    top: 480px;
+    height: 187px;
+    width: 275px;
+    display: none;
+}
+#timg3 {
+    position: absolute;
+    left: 0px;
+    top: 480px;
+    height: 187px;
+    width: 275px;
+    display: none;
+}
+ 
+#timg1 {
+    position: absolute;
+    left: 40px;
+    top: 480px;
+    height: 187px;
+    width: 275px;
+    display: none;
+}
+#Ero {
+    position: absolute;
+    top: 100px;
+    left: 100px;
+    display: none;
+}
+
+
+#tutor {
+    position: absolute;
+    top: 100px;
+    left: 100px;
+    display: none;
+    text-align: center;
+}
+
+#ttbut1 {
+    position: absolute;
+    top: 500px;
+    left: 170px;
+    display: none;
+
+}
+#ttbut2 {
+    position: absolute;
+    top: 500px;
+    left: -20px;
+    display: none;
+
+}
+#tbut1 {
+    position: absolute;
+    top: 500px;
+    left: 170px;
+
+
+}
+#tbut2 {
+    position: absolute;
+    top: 500px;
+    left: -20px;
+
+
+}
+
+#ttext1{
+    position: absolute;
+    top: 150px;
+    left: 50px;
+    text-align: center;
+}
+#ttext1x1{
+    position: absolute;
+    top: 300px;
+    left: 50px;
+    text-align: center;
+}
+
+
  #awdf {
     position: absolute;
     top: 632px;
@@ -168,6 +312,26 @@ background: radial-gradient(circle, rgba(190,190,190,1) 0%, rgba(38,0,255,1) 74%
     border-radius: 26px;
     background-color: rgb(0, 0, 0);
 }
+#regbut1 {
+    position: absolute;
+    left: 32px;
+    top: 509px;
+    width: 380px;
+    color: rgb(225, 225, 225);
+    height: 87px;
+    font-size: 50px;
+    display: none;
+    border-radius: 26px;
+    background-color: rgb(0, 0, 0);
+}
+.oa {
+    position: absolute;
+    color: rgb(225, 225, 225);
+    font-size: 50px;
+    display: block;
+    border-radius: 26px;
+    background-color: rgb(0, 0, 0);
+}
 #faw {
     position: absolute;
     left: 110px;
@@ -175,6 +339,18 @@ background: radial-gradient(circle, rgba(190,190,190,1) 0%, rgba(38,0,255,1) 74%
     color: rgb(0, 0, 0);
     display: none;
 }
+
+#daw1 {
+    position: absolute;
+    left: 24%;
+    top: 174px;
+    display: none;
+    width: 210px;
+    height: 35px;
+    font-size: 30px;
+    border-radius: 15px;
+}
+
 #daw {
     position: absolute;
     left: 24%;
