--- a/usersstyles/stykehome3.css
+++ b/usersstyles/stykehome3.css
@@ -1,9 +1,102 @@
+
+
+#seting {
+    position: absolute;
+    left: 47px;
+    top: 39px;
+    height: 58px;
+    width: 58px;
+}
+
+#lolreg {
+    position: absolute;
+    left: 100px;
+    top: 100px;
+}
+
+.oa {
+    position: absolute;
+    color: rgb(225, 225, 225);
+    font-size: 50px;
+    display: block;
+    border-radius: 26px;
+    background-color: rgb(0, 0, 0);
+}
+
+
+#imgs1 {
+    position: absolute;
+    height: 100px;
+    width: 100px;
+    top: 243px;
+    left: -67px;
+    display: none;
+}
+
+
+#imgs2 {
+    position: absolute;
+    height: 100px;
+    width: 100px;
+    top: 243px;
+    left: 47px;
+    display: none;
+}
+#imgs3 {
+    position: absolute;
+    height: 100px;
+    width: 100px;
+    top: 243px;
+    left: 179px;
+    display: none;
+}
+
+
+
+
+#regbut1 {
+    position: absolute;
+    top: 400px;
+    left: 20px;
+    display: none;
+}
+
+
+
+
+
+
+
+#daw1 {
+    position: absolute;
+    left: 24%;
+    top: 174px;
+    display: none;
+    width: 210px;
+    height: 35px;
+    font-size: 30px;
+    border-radius: 15px;
+}
+
+
+
+
+
+
+
+
+
+
+
 #avatar {
     position: absolute;
     left: 151px;
     top: 7px;
     width: 100px;
     height: 100px;
+    background-size: 100px 100px;
+    background-image: url("/icon/da.jpg");
+    
 }
 
 #av {
@@ -121,11 +214,14 @@
 }
 #avata {
     position: absolute;
-    width: 458px;
+    width: 358px;
     height: 300px;
-    left: -30px;
+    left: 30px;
     top: 194px;
     display: none;
+    background-size: 358px 300px ;
+    background-image: url("/icon/da.jpg");
+    
 }
 #hed2 {
     
@@ -138,7 +234,8 @@
     border: 3px /* width */ solid /* style */ rgb(0, 0, 0);
     background: rgb(0, 0, 0);
     background-size: 364px 282px;
-    background-image: url(https://memepedia.ru/wp-content/uploads/2019/01/hamster.jpg);
+    background-image: url();
+    display: none;
 }
 #home {
     position: absolute;
@@ -172,11 +269,12 @@
     height: -102px;
     width: -40px;
     padding: 175px;
+    display: none;
     border-radius: 9px;
     background: rgb(0, 0, 0);
     border: 3px /* width */ solid /* style */ rgb(0, 0, 0);
     background-size: 350px 350px;
-    background-image: url(https://i.gifer.com/7TMH.gif);
+    background-image: url();
 }
 
 #awdf {
