--- a/usersstyles/stylehome1.css
+++ b/usersstyles/stylehome1.css
@@ -1,10 +1,14 @@
+
 #avatar {
     position: absolute;
     left: 151px;
     top: 7px;
     width: 100px;
-    border-radius: 12px;
     height: 100px;
+    background-size: 100px 100px;
+    background-image: url("/icon/da.jpg");
+    border-radius: 12px;
+    
 }
 
 
@@ -97,7 +101,7 @@
     background: rgb(190,190,190);
     background: radial-gradient(circle, rgba(190,190,190,1) 0%, rgba(255,164,0,1) 66%);
     border-radius: 25px;
-}ck {
+}#ck {
     position: absolute;
     top: 100px;
     left: 37%;
@@ -180,12 +184,22 @@
 }
 #avata {
     position: absolute;
-    width: 251px;
-    height: 262px;
-    left: 78px;
+    width: 358px;
+    height: 300px;
+    left: 30px;
     top: 194px;
     display: none;
+    background-size: 358px 300px ;
+    background-image: url("/icon/da.jpg");
     border-radius: 12px;
+    
+}
+#seting {
+    position: absolute;
+    left: 47px;
+    top: 39px;
+    height: 58px;
+    width: 58px;
 }
 #hed3 {
     display: none;
@@ -201,16 +215,18 @@
     background-size: 320px 347px;
     background-image: url(icon/da.jpg);
 }
+#lolreg
+{
+    position: absolute;
+    left: 100px;
+}
 
 #awdf {
     position: absolute;
-    top: 802px;
-    left: 5px;
-    height: 77px;
-    width: 406px;
-    border-radius: 25px;
-    background: rgb(190,190,190);
-background: radial-gradient(circle, rgba(190,190,190,1) 0%, rgba(38,0,255,1) 74%);
+    left: 148px;
+    bottom: 0px;
+    width: 91px;
+    height: 79px;
 }
 #daw {
     position: absolute;
@@ -219,3 +235,61 @@ background: radial-gradient(circle, rgba(190,190,190,1) 0%, rgba(38,0,255,1) 74%
     font-size: 80px;
     color: rgb(255, 255, 255);
 }
+#regbut1 {
+    position: absolute;
+    top: 400px;
+    left: 20px;
+    display: none;
+}
+
+.oa {
+    position: absolute;
+    color: rgb(225, 225, 225);
+    font-size: 50px;
+    display: block;
+    border-radius: 26px;
+    background-color: rgb(0, 0, 0);
+}
+
+
+#daw1 {
+    position: absolute;
+    left: 24%;
+    top: 174px;
+    display: none;
+    width: 210px;
+    height: 35px;
+    font-size: 30px;
+    border-radius: 15px;
+}
+
+
+
+#imgs1 {
+    position: absolute;
+    height: 100px;
+    width: 100px;
+    top: 243px;
+    left: -67px;
+    display: none;
+}
+
+
+#imgs2 {
+    position: absolute;
+    height: 100px;
+    width: 100px;
+    top: 243px;
+    left: 47px;
+    display: none;
+}
+#imgs3 {
+    position: absolute;
+    height: 100px;
+    width: 100px;
+    top: 243px;
+    left: 179px;
+    display: none;
+}
+
+
