--- a/usersstyles/stykehome3.css
+++ b/usersstyles/stykehome3.css
@@ -14,6 +14,23 @@
     top: 100px;
 }
 
+
+
+
+
+#lolreg
+{
+    position: absolute;
+    left: 100px;
+}
+
+
+
+
+
+
+
+
 .oa {
     position: absolute;
     color: rgb(225, 225, 225);
@@ -280,15 +297,24 @@
 }
 
 #awdf {
-    position: absolute;
-    top: 802px;
-    left: 5px;
-    height: 77px;
-    width: 406px;
-    border-radius: 25px;
-    background: rgb(190,190,190);
-background: radial-gradient(circle, rgba(190,190,190,1) 0%, rgba(38,0,255,1) 74%);
+  
+        position: absolute;
+        left: 148px;
+        bottom: 0px;
+        width: 91px;
+        height: 79px;
+        
+
 }
+      .u {
+        /* … */
+        transition: transform .2s;
+    }    .u:hover {
+        transform: scale(1.2);
+    }
+
+
+
 #daw {
     position: absolute;
     left: 158px;
