--- a/usersstyles/stylehome.css
+++ b/usersstyles/stylehome.css
@@ -1,11 +1,16 @@
+
 #avatar {
     position: absolute;
-    left: 131px;
+    left: 151px;
     top: 7px;
-    width: 150px;
+    width: 100px;
     height: 100px;
-    border-radius: 12px;border-radius: 12px;
+    background-size: 100px 100px;
+    background-image: url("/icon/da.jpg");
+    border-radius: 12px;
+    
 }
+
 
 #av {
     position: absolute;
@@ -22,7 +27,7 @@
 #nick {
     position: absolute;
     top: 100px;
-    left: 370%;
+    left: 37%;
 }
 #dgt {
     position: absolute;
@@ -54,6 +59,13 @@
     left: 206px;
     height: 80px;
     width: 80px;
+}
+#seting {
+    position: absolute;
+    left: 47px;
+    top: 39px;
+    height: 58px;
+    width: 58px;
 }
 #adki {
     position: absolute;
@@ -122,12 +134,15 @@
 }
 #avata {
     position: absolute;
-    width: 458px;
+    width: 358px;
     height: 300px;
-    left: -30px;
+    left: 30px;
     top: 194px;
-    border-radius: 12px;
     display: none;
+    background-size: 358px 300px ;
+    background-image: url("/icon/da.jpg");
+    border-radius: 12px;
+    
 }
 #hed2 {
     
@@ -166,6 +181,26 @@
     height: 62px;
 
 }
+
+
+.oa {
+    position: absolute;
+    color: rgb(225, 225, 225);
+    font-size: 50px;
+    display: block;
+    border-radius: 26px;
+    background-color: rgb(0, 0, 0);
+}
+#lolreg
+{
+    position: absolute;
+    left: 100px;
+}
+
+
+
+
+
 #hed3 {
     
     position: absolute;
@@ -183,13 +218,10 @@
 
 #awdf {
     position: absolute;
-    top: 802px;
-    left: 5px;
-    height: 77px;
-    width: 406px;
-    border-radius: 25px;
-    background: rgb(190,190,190);
-background: radial-gradient(circle, rgba(190,190,190,1) 0%, rgba(38,0,255,1) 74%);
+    left: 148px;
+    bottom: 0px;
+    width: 91px;
+    height: 79px;
 }
 #daw {
     position: absolute;
@@ -197,4 +229,65 @@ background: radial-gradient(circle, rgba(190,190,190,1) 0%, rgba(38,0,255,1) 74%
     top: -88px;
     font-size: 80px;
     color: rgb(255, 255, 255);
+}
+
+
+
+
+
+
+#regbut1 {
+    position: absolute;
+    top: 400px;
+    left: 20px;
+    display: none;
+}
+
+
+
+
+
+
+
+
+#daw1 {
+    position: absolute;
+    left: 24%;
+    top: 174px;
+    display: none;
+    width: 210px;
+    height: 35px;
+    font-size: 30px;
+    border-radius: 15px;
+}
+
+
+
+
+
+#imgs1 {
+    position: absolute;
+    height: 100px;
+    width: 100px;
+    top: 243px;
+    left: -67px;
+    display: none;
+}
+
+
+#imgs2 {
+    position: absolute;
+    height: 100px;
+    width: 100px;
+    top: 243px;
+    left: 47px;
+    display: none;
+}
+#imgs3 {
+    position: absolute;
+    height: 100px;
+    width: 100px;
+    top: 243px;
+    left: 179px;
+    display: none;
 }
